--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://Igor-Kreshchenko.github.io/goit-react-hw-08-phonebook",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
